lldpd (0.5.4)
  * Features:
    + Get OS information from /etc/os-release if available. Patch from
      Michael Tremer.

lldpd (0.5.3)
  * Fixes:
    + Allow root to change configuration of lldpd when lldpctl has suid set.
  * Features:
    + Handle Dot3 POE-MDI TLV (802.3af and 802.3at).
    + Allow to set Dot3 POE-MDI from lldpctl.

lldpd (0.5.2)
  * Features:
    + More flexible smart mode and new default. Manual page has been updated.
    + Add a "receive-only" mode with "-r" switch.

lldpd (0.5.1)
  * Features:
    + Allow to force a protocol even when no peer for this protocol is
      detected.
    + Add a smart mode that allows to discard bogus port information,
      for example CDP packets that are flooded through a switch that
      does not support CDP.
    + Allow to set LLDP-MED network policy from lldpctl, thanks to a patch from
      Philipp Kempgen.
    + Allow to set LLDP-MED POE-MDI from lldpctl.
    + Add a summary of available options in "lldpd -h" and "lldpctl -h",
      thanks to a patch from Jorge Boncompte.
    + Add a new output (keyvalue) for lldpctl.
    + Listen on VLAN using an appropriate BPF filter, VLAN
      decapsulation. Older "listen on vlan" feature is discarded. See
      README for more information on the new feature.
    + Use output of lsb_release if available for system description.

  * Fixes:
    + Ignore interface with no queue. It should filter out interfaces
      like "vnet0" that would fail if we try to send something on them.
    + Don't check CDP checksums (not really a fix but it appears that
      Cisco checksum have some difficult corner cases).

lldpd (0.5.0)

  * Features:
    + lldpd can now handle several systems on the same port. This
      modification also allows to speak to a switch using CDP and LLDP
      for example.
    + The way that lldpd gathers information for each port has been
      abstracted. This should allow to support more systems (BSD for